html/css/pedals.css
/* ... */
/* = AUTHOR AND PLUGIN'S NAME
================================================ */
.mod-pedal .mod-plugin-author,
.mod-pedal .mod-plugin-brand,
.mod-pedal .mod-plugin-title {
    z-index:10;
}

/* = FOOTSWITCH
================================================ */
.mod-pedal .mod-footswitch {
    z-index:20;
}

/* = CONTROLS
================================================ */
.mod-pedal .mod-control-group {
    z-index:20;
}

/* = INPUT/OUTPUT
================================================ */
.mod-pedal .mod-pedal-input,
.mod-pedal .mod-pedal-output {
    z-index:30;
}


/* = LIGHT ON/OFF
================================================ */
.mod-pedal .mod-light.off { background-image:url(../img/red-light-off.png); }
.mod-pedal .mod-light.on  { background-image:url(../img/red-light-on.png); }


/* = INPUT
================================================ */
.mod-pedal-input-wrapper {
    background: rgba(0, 0, 0, 0.8);
    height:100px;
    position:relative;
    z-index:35;
    padding: 0 10px;
    margin-left: -10px;
}

.mod-pedal .mod-pedal-input {
    position: absolute;
    top: 106px;
    left: -88px;
    width: 88px;
}
.mod-pedal .mod-pedal-input .mod-audio-input,
.mod-pedal .mod-pedal-input .mod-midi-input,
.mod-pedal .mod-pedal-input .mod-cv-input {
    position: relative;
    margin-bottom: 13px;
}
.mod-pedal .mod-pedal-input .mod-midi-input {
    right: -12px;
}
.mod-pedal .mod-pedal-input .mod-cv-input {
    right: -8px;
}
.mod-input.expanded .mod-output-jack {
    background-image:url(../img/audio-jack.png) !important;
    height: 40px;
}

/* = OUTPUT
================================================ */
.mod-pedal-output-wrapper {
    background:#000;
    border-radius:4px;
    height:100px;
    right:-32px;
    position:absolute;
    top:78px;
    width:32px;
    z-index:50;
}

.mod-pedal-output-wrapper .mod-pedal-output-arrow {
    border-bottom:12px solid transparent;
    border-right:12px solid #000;
    border-top:12px solid transparent;
    height:0;
    position:absolute;
    left:-12px;
    top:39px;
    width:0;
}
.mod-pedal .mod-pedal-output {
    position: absolute;
    top: 106px;
    right: -87px;
    width: 87px;
}
.mod-pedal .mod-pedal-output .mod-audio-output,
.mod-pedal .mod-pedal-output .mod-midi-output,
.mod-pedal .mod-pedal-output .mod-cv-output {
    position: relative;
    margin-bottom: 13px;
}

/* = PEDAL SETTINGS - Pop Up Window
================================================ */
body > .mod-settings {
    background:rgba(17, 17, 17, 0.9);
    bottom:0;
    left:0;
    position:absolute;
    right:0;
    top:0;
/*
    transition-property: display, transform;
    transition-duration: 0.5s, 0.33s;
    transition-delay: 0.5s, 0s;
    transform: translateY(-100%);
*/
}

body > .mod-settings.mod-window-visible {
/*
    transition-delay: 0s, 0s;
    transform: translateY(0%);
*/
}

.mod-pedal-settings {
    bottom:38px;
    color:#fff;
    left:30px;
    margin:0 auto;
    overflow:auto;
    padding:0;
    position:absolute;
    right:30px;
    top:38px;
    z-index:10;
}

.mod-pedal-settings header {
    padding:10px 10px 18px;
}

.mod-pedal-settings h1 {
    font-size:24px;
    font-weight:normal;
    margin:0;
}

.mod-pedal-settings .mod-actions {
    border-color:#2b2b2b;
    border-style:dotted;
    border-width:1px 0 0 0;
    margin:18px;
    padding:18px 0 0 0;
    text-align:right;
}

.mod-pedal-settings .mod-control-group {
    margin:0;
    padding:0 18px;
}

/* PRESETS */

.mod-presets {
    margin:0;
}
.mod-presets>div.mod-enumerated-list {
    width: 100% ;
    padding-left: 0;
}
.mod-presets select {
    color: #000;
    background-color: #FFFFFE; /* forces mod-remote to use custom combo-box bg */
}
.mod-presets footer{
    width: 100%;
    position: absolute;
    left: 0;
    padding: 4px 10px;
}
.mod-presets .btn {
    font-size: 10px;
    border-radius: 0px;
    margin: 0;
    min-height: 29px;
    min-width: 29px;
    font-weight: bold;
    clear: both;
    background-color: black;
    background-repeat: no-repeat;
    background-position: center center;
    text-transform: uppercase !important;
}
.mod-presets .btn.preset-btn-save {
    background-image: url('../img/icons/25/save.png');
}
.mod-presets .btn.preset-btn-save-as {
    background-image: url('../img/icons/25/save_as.png');
    width: 32px
}
.mod-presets .btn.preset-btn-rename {
    background-image: url('../img/icons/25/rename.png');
}
.mod-presets .btn.preset-btn-delete {
    background-image: url('../img/icons/25/delete.png');
    margin-right: 5px
}


.preset-manager {
    color: #000;
}

/* = KNOB
================================================ */
.mod-pedal-settings .mod-knob {
    background:#212121;
    float:left;
    height:160px;
    margin-bottom:2px;
    margin-right:2px;
    position:relative;
    text-align:center;
    width:160px;
}

.mod-pedal-settings .mod-knob > span.mod-knob-current-value {
    bottom:12px;
    font-weight:bold;
    left: 38px;
    position:absolute;
    text-align:center;
    right: 38px;
    padding: 2px;
    border: 1px solid #000;
    background: black;
}
.mod-pedal-settings .mod-knob > span.mod-knob-current-value:focus {
    border: 1px solid #883996;
    background: black;
}
.mod-pedal-settings .mod-knob > span.mod-knob-current-value::selection {
  background: #883996;
}
.mod-pedal-settings .mod-knob > span.mod-knob-current-value::-moz-selection {
  background: #883996;
}
.mod-pedal-settings .mod-knob > span.mod-knob-max-value {
    font-size:10px;
    left:110px;
    position:absolute;
    text-align:left;
    bottom: 43px;
}
.mod-pedal-settings .mod-knob > span.mod-knob-min-value {
    font-size:10px;
    position:absolute;
    text-align:right;
    right:110px;
    bottom: 43px;
}
/* ... */

